--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Umberto Villa 
-description: Research Scientist <br> Oden Institute, UT Austin
-author: Umberto Villa
-author_email: uvilla@oden.utexas.edu
+title: Anshul Tomar
+description: Graduate Student <br> Department of Computer Science, UT Austin
+author: Anshul Tomar
+author_email: anshultomar@utexas.edu
 google_analytics: UA-52448613-2
 theme: jekyll-theme-cayman
